[gd_scene load_steps=3 format=3 uid="uid://bqnvj8j4vhgx8"]

[ext_resource type="Script" uid="uid://ddxygiiob0qyo" path="res://scripts/combat/combat_hud.gd" id="1_8yvnp"]
[ext_resource type="Texture2D" uid="uid://rlopj1qxwnjj" path="res://assets/combat/sun_icon.png" id="2_n3k4p"]

[node name="CombatHUD" type="CanvasLayer"]
script = ExtResource("1_8yvnp")

[node name="SunCounter" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 90.0

[node name="SunIcon" type="TextureRect" parent="SunCounter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_n3k4p")
expand_mode = 1

[node name="SunLabel" type="Label" parent="SunCounter"]
layout_mode = 0
offset_left = 50.0
offset_top = 10.0
offset_right = 90.0
offset_bottom = 36.0
text = "50"

[node name="PlantPanel" type="HBoxContainer" parent="."]
offset_left = 150.0
offset_top = 50.0
offset_right = 550.0
offset_bottom = 120.0
theme_override_constants/separation = 10

[node name="WaveLabel" type="Label" parent="."]
offset_left = 600.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 76.0
text = "Get Ready!"
